- fix for bug #17771 (insert_before misbeaviour (DOM L2 spec.)) @ - DomNode->insert_before behaves now according to W3C spec @   ie. new_child is moved, not copied. (chregu)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@92001 c90b9560-bf6c-de11-be94-00142212c4b1